<resources>
    <string name="app_name">Monthly Budget</string>
    <string name="app_name_icon">Shared Monthly Budget</string>
    <string name="id">id</string>
    <string name="category">Category</string>
    <string name="month">month</string>
    <string name="budget">Budget</string>
    <string name="empty"></string>
    <string name="zero">0</string>
    <string name="separator">-</string>
    <string name="hebrew">עברית</string>
    <string name="english">EN</string>
    <string name="create_budget">CREATE BUDGET</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="logout">(Logout)</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="row_options">Row Options</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="categories">CATEGORIES</string>
    <string name="shares">Shares</string>
    <string name="users">users</string>
    <string name="first_name">fName</string>
    <string name="share">Share</string>
    <string name="insert_transaction">INSERT TRANSACTION</string>
    <string name="close">CLOSE</string>
    <string name="remember_me">remember me</string>
    <string name="balance">Balance</string>
    <string name="total">Total:</string>
    <string name="payment_method">P. Method</string>
    <string name="charge_date">C. Date</string>
    <string name="price">Price</string>
    <string name="store">Store</string>
    <string name="all">All</string>
    <string name="sum">sum</string>
    <string name="no_transactions_exists">No transactions found!</string>
    <string name="constant_date">fixed</string>
    <string name="charge_day">charge day</string>
    <string name="create">Create</string>
    <string name="please_insert_budget">please insert budget!</string>
    <string name="no_budget_changes">No changes to save.</string>
    <string name="create_budget_question">Creating a new budget will delete the current month\'s data, continue?</string>
    <string name="duplicate_category">Duplicate category!</string>
    <string name="illegal_Character">Illegal character!</string>
    <string name="please_insert_category">Please insert a category!</string>
    <string name="please_insert_value">Please insert a value!</string>
    <string name="please_insert_store">Please insert a store!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="budget_created_successfully">Budget created successfully!</string>
    <string name="logged_in_successfully">Logged in successfully!</string>
    <string name="insert">Insert</string>
    <string name="selecting_date">Selecting Date</string>
    <string name="date_format">%1$s/%2$s/%3$d</string>
    <string name="header_with_arrow">%1$s%2$c</string>
    <string name="transaction_inserted_successfully">Transaction inserted successfully!</string>
    <string name="requiredField">Required field!</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="chek">Check</string>
    <string name="bank_wired">Bank Transfer</string>
    <string name="user_created">User Created</string>
    <string name="logged_as">Logged in as: </string>
    <string name="active_transactions">active</string>
    <string name="error">error!</string>
    <string name="network_error">Network error!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="email_is_required">Email is Required.</string>
    <string name="password_is_required">Password is Required.</string>
    <string name="password_length_must_be_at_least_6">Password Must be >= 6 Characters</string>
    <string name="password_are_not_matching">Passwords do not match</string>
    <string name="recommend_to_friend">Recommend to a friend</string>
    <string name="settings">Settings</string>
    <string name="successfully_shared">Successfully shared!</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="enter_value">Enter value</string>
    <string name="share_budget_question">The user \"%s\" has shared a budget with you.\nDo you want to share?\nPlease note that receiving the sharing will lose existing information.</string>
    <string name="share_budget">Share Monthly Budget</string>
    <string name="user_already_shared">The user already shared!</string>
    <string name="please_enter_user_email_to_share">Please enter the user\'s email you want to share</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="app_guide">App Guide</string>
    <string name="about">About</string>
    <string name="data">Data</string>
    <string name="updates_and_notifications">Update &amp; Notifications</string>
    <string name="currency">Currency</string>
    <string name="email_updates">Email Updates</string>
    <string name="notifications">Notifications</string>
    <string name="auto_complete_length">Autocomplete starting from</string>
    <string name="default_show_active_only">Show active transactions only</string>
    <string name="default_currency">$</string>
    <string name="usd">$</string>
    <string name="eur">€</string>
    <string name="skl">₪</string>
    <string name="select_charge_day">Select Charge Day</string>
    <string name="one">1</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="email_sent_to_you_to_reset_password">An email has been sent to reset your password!</string>
    <string name="please_enter_user_email_to_reset_password">Please enter user\'s email to reset password</string>
    <string name="select">Select</string>
    <string name="general">General</string>
    <string name="error_weak_password">Weak password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_email_already_in_use">Email already in use</string>
    <string name="user_not_found">User not found</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="are_you_sure_you_want_to_refresh">Page refresh may result in loss of information.\nAre you sure you want to refresh?</string>
    <string name="default_show_active_only_summary">Show only active transactions(not deleted) as default in transactions screen</string>
    <string name="tutorial_app_youtube">https://youtu.be/6zDh77bxRBQ</string>
    <string name="admob_app_id">ca-app-pub-9791546601159997~8799713541</string>
    <string name="admob_transition_unit_id">ca-app-pub-9791546601159997/1516119894</string>
    <string name="admob_banner_unit_id">ca-app-pub-9791546601159997/7490378563</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="your_message_was_sent_successfully">Your message was sent successfully!</string>
    <string name="user_not_exists">User does not exist!</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_password_for_confirmation">Please enter password for confirmation</string>
    <string name="update">Update</string>
    <string name="please_enter_new_email">Please enter new email</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_phone">Please enter new phone number</string>
    <string name="please_enter_new_user_name">Please enter new user name</string>
    <string name="change_user_name">Change User Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="email_successfully_changed">Email successfully changed!</string>
    <string name="password_successfully_changed">Password successfully changed!</string>
    <string name="phone_number_successfully_changed">Phone number successfully changed!</string>
    <string name="user_name_successfully_changed">User name successfully changed!</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Add a comment (optional)</string>
    <string name="discount">Discount</string>
    <string name="discount_percent">%</string>
    <string name="final_price">Final Price:</string>
    <string name="original_price">Original</string>
    <string name="add_category">+ Add Category</string>
    <string name="load_newer_years">▲ …</string>
    <string name="load_older_years">▼ …</string>
    <string name="allow_edit_previous_months">Allow edit previous months</string>
    <string name="allow_edit_previous_months_summary">Enable inserting and editing transactions in previous months</string>
    <string name="join_monthly_budget">Join Monthly Budget</string>
    <string name="already_registered_question">Already Registered?</string>
    <string name="login_here">Login Here</string>
    <string name="new_here_question">New Here?</string>
    <string name="create_account">Create Account</string>
    <string name="track_finances_smartly">Track your finances smartly</string>
    <string name="we_love_to_hear">We\'d love to hear from you</string>
    <string name="current_value">Current Value</string>
    <string name="new_value">New Value</string>
    <string name="could_not_open_guide">Could not open guide</string>
    <string name="account_disabled">Account has been disabled</string>
    <string name="too_many_attempts">Too many attempts. Please try again later.</string>
    <string name="email_password_not_enabled">Email/password accounts are not enabled</string>
    <string name="permission_denied">Permission denied. Please check your access.</string>
    <string name="session_expired">Session expired. Please log in again.</string>
    <string name="minimum_6_characters">Minimum 6 characters</string>
    <string name="optional">Optional</string>
    <string name="menu">Menu</string>
    <string name="language">Language</string>
    <string name="more_options">More options</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="page_indicator">%1$d / %2$d</string>
    <string name="language_system_default">System Default</string>
    <string name="language_english">English</string>
    <string name="language_hebrew">עברית (Hebrew)</string>
    <string name="language_spanish">Español (Spanish)</string>
    <string name="language_french">Français (French)</string>
    <string name="language_german">Deutsch (German)</string>
    <string name="language_italian">Italiano (Italian)</string>
    <string name="language_portuguese">Português (Portuguese)</string>
</resources>