<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory 
        app:title="@string/general"
        app:iconSpaceReserved="false">

        <Preference
            app:key="language"
            app:title="@string/language"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            app:key="currency"
            app:title="@string/currency"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            app:key="chargeDay"
            app:title="@string/charge_day"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SeekBarPreference
            app:key="autoComplete"
            app:title="@string/auto_complete_length"
            android:max="5"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            app:key="defaultShowActiveOnly"
            app:title="@string/default_show_active_only"
            app:summary="@string/default_show_active_only_summary"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            app:key="allowEditPreviousMonths"
            app:title="@string/allow_edit_previous_months"
            app:summary="@string/allow_edit_previous_months_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory 
        app:title="@string/profile"
        app:iconSpaceReserved="false">
        
        <Preference
            app:key="changeUserName"
            app:title="@string/change_user_name"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
        <Preference
            app:key="changeEmail"
            app:title="@string/change_email"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
        <Preference
            app:key="changePassword"
            app:title="@string/change_password"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
        <Preference
            app:key="changePhone"
            app:title="@string/change_phone"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory 
        app:title="@string/updates_and_notifications"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="emailUpdates"
            app:title="@string/email_updates"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifications"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>