<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/row_item_background"
    android:padding="8dp"
    android:layout_marginBottom="6dp"
    android:gravity="center_vertical"
    android:minHeight="50dp"
    android:weightSum="1"
    android:baselineAligned="false"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/trn_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.11"
        android:text="@string/id"
        android:textColor="#B8C5D6"
        android:textSize="11sp"
        android:gravity="center_vertical"
        android:textDirection="locale"
        android:singleLine="true"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/trn_category"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.16"
        android:text="@string/category"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:textDirection="locale"
        android:singleLine="true"
        android:ellipsize="end"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/trn_store"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.19"
        android:text="@string/store"
        android:textColor="#B8C5D6"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:textDirection="locale"
        android:singleLine="true"
        android:ellipsize="end"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/trn_charge_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.21"
        android:text="@string/charge_date"
        android:textColor="#B8C5D6"
        android:textSize="11sp"
        android:gravity="center_vertical"
        android:textDirection="ltr"
        android:singleLine="true"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/trn_payment_method"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.18"
        android:text="@string/payment_method"
        android:textColor="#B8C5D6"
        android:textSize="11sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textDirection="locale"
        android:singleLine="true"
        android:ellipsize="end"
        tools:ignore="RtlCompat"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/trn_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="0.15"
        android:text="@string/price"
        android:textColor="#10B981"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textDirection="ltr"
        android:textAlignment="viewEnd"
        android:gravity="center_vertical|end"
        android:singleLine="true"
        tools:ignore="RtlCompat"
        tools:targetApi="jelly_bean_mr1" />

</LinearLayout>
